// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationList matches snapshot where there is no notifications 1`] = `
<Fragment>
  <CustomizedActionButton
    ariaLabel="header.notifications.show"
    iconProps={
      Object {
        "className": false,
        "iconName": "Ringer",
      }
    }
    id="notifications"
    onClick={[Function]}
    text="header.notifications.show"
  />
  <StyledPanelBase
    closeButtonAriaLabel="common.close"
    isBlocking={true}
    isOpen={false}
    onDismiss={[Function]}
    onRenderHeader={[Function]}
    type={1}
  >
    <div>
      <div>
        header.notifications.panel.noNotifications
      </div>
    </div>
  </StyledPanelBase>
</Fragment>
`;

exports[`notificationList matches snapshot where there is no notifications 2`] = `
<Fragment>
  <CustomizedActionButton
    ariaLabel="header.notifications.show"
    iconProps={
      Object {
        "className": "new-notifications",
        "iconName": "Ringer",
      }
    }
    id="notifications"
    onClick={[Function]}
    text="header.notifications.show"
  />
  <StyledPanelBase
    closeButtonAriaLabel="common.close"
    isBlocking={true}
    isOpen={false}
    onDismiss={[Function]}
    onRenderHeader={[Function]}
    type={1}
  >
    <div>
      <div
        key="0"
      >
        <Component
          notification={
            Object {
              "text": Object {
                "translationKey": "test",
              },
              "type": 2,
            }
          }
          showAnnoucement={false}
        />
        <hr
          className="notification-list-divider"
        />
      </div>
    </div>
  </StyledPanelBase>
</Fragment>
`;
